Fixed spacings, paddings and UI

--- a/components/InstructorView/IOptions.module.scss
+++ b/components/InstructorView/IOptions.module.scss
@@ -33,13 +33,12 @@
     
   }
   .box1 {
-    flex: 0 30 50%;
+    flex: 0 30 45%;
     flex-direction: row;
     text-align: center;
     background-color: #99EEFF;
     background-position: left;
     color: black;
-    padding: 10px;
     // overflow-y: scroll;
     max-height: 80px;
   
@@ -58,8 +57,9 @@
     background-color: #44CCFF;
     width: 50%;
     max-width: 1000px;
-    padding: 40px;
+    padding-top: 40px;
     height: 35vh;
+    text-align: left;
   
   
     > h2 {
@@ -76,7 +76,7 @@
     font-size: 2.50rem;
     margin-block-start: 0.0em;
     margin-block-end: 0.0em;
-    margin-inline-start: 130px;
+    margin-inline-start: 80px;
     margin-inline-end: 100px;
   }
 
@@ -90,9 +90,10 @@
     // align-items: 
     background-color: #F5FFA8;
 
-    width: 43vh;
+    width: 37vh;
     max-width: 1000px;
-    padding: 40px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     height: 35vh;
   
     > h2 {
@@ -100,3 +101,5 @@
       margin: 15px 0;
     }
   }
+
+  
