--- a/components/InstructorView/Menu/Menu.module.scss
+++ b/components/InstructorView/Menu/Menu.module.scss
@@ -1,7 +1,7 @@
 .box{
     position: relative;
     top:5vh;
-    right:25vh;
+    right:29vh;
     display: flex;
     flex-wrap: wrap;
     // align-items: 
